syntax = "proto3";

package datacube;

// Query request sent from client to datacube
message QueryRequest {
  // List of providers to query (empty = all applicable)
  repeated string providers = 1;
  // The search query string
  string query = 2;
  // Maximum number of results to return
  int32 max_results = 3;
  // Whether to require exact matches only
  bool exact = 4;
}

// Query response containing matched items
message QueryResponse {
  // The original query string
  string query = 1;
  // List of matched items
  repeated Item items = 2;
  // Query ID for tracking
  string qid = 3;
}

// A single result item
message Item {
  // Unique identifier for this item
  string id = 1;
  // Primary display text (e.g., app name)
  string text = 2;
  // Secondary display text (e.g., description)
  string subtext = 3;
  // Icon name or path
  string icon = 4;
  // Provider that generated this item
  string provider = 5;
  // Relevance score (0.0 - 1.0)
  float score = 6;
  // Execution command or action
  string exec = 7;
  // Additional metadata
  map<string, string> metadata = 8;
  // Available actions for this item
  repeated Action actions = 9;
}

// An action that can be performed on an item
message Action {
  // Action identifier
  string id = 1;
  // Display name
  string name = 2;
  // Icon for the action
  string icon = 3;
}

// Activate request - execute an item's action
message ActivateRequest {
  // The item to activate
  Item item = 1;
  // Specific action ID (empty = default action)
  string action_id = 2;
}

// Activate response
message ActivateResponse {
  // Whether activation was successful
  bool success = 1;
  // Error message if failed
  string error = 2;
}

// List available providers
message ListProvidersRequest {}

message ListProvidersResponse {
  repeated ProviderInfo providers = 1;
}

message ProviderInfo {
  // Provider name/identifier
  string name = 1;
  // Human-readable description
  string description = 2;
  // Query prefix (e.g., "=" for calculator)
  string prefix = 3;
  // Whether provider is enabled
  bool enabled = 4;
}
